Different Set Realization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PDSD_CourseWork)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(PDSD_CourseWork main.cpp)
+add_executable(PDSD_CourseWork main.cpp SetOnNodeClass.h SetOnNodes.cpp SetOnNodeClass.cpp SetOnList.cpp SetOnSet.h SetOnSet.cpp SetOnVector.cpp SetOnVector.h SetOnString.cpp SetOnString.h)
